# circles

./: .gitignore  README.md  eslint.config.js  flake.nix  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
frontend/: index.html  package.json  vite.config.js
frontend/assets/styles/base/: theme.css
frontend/src/: app.jsx  main.jsx
frontend/src/assets/styles/base/: index.css  theme.css
frontend/src/assets/styles/components/: control-panel.css  error-screen.css  index.css  interaction-screen.css  option.css  options-view.css  optionsview.css  optionview.css  start-screen.css
frontend/src/assets/tokens/: list.json
frontend/src/components/: choose_theme_splash.jsx  control-panel.jsx  control_panel.jsx  error-screen.jsx  interaction-screen.jsx  option.jsx  optionsview.jsx  optionview.jsx  project_selector.jsx  question.jsx  select_project.jsx  session.jsx  shape.jsx  start_screen.jsx  theme.jsx  theme_selector.jsx  token.jsx
frontend/src/components/popups/: delete_project_data.jsx  export_project_data.jsx  import_project.jsx  start_project.jsx
frontend/src/data/tokens/: list.json
frontend/src/locales/: en.json  index.js  nl.json  po.json  sl.json
main/: .gitignore  Cargo.toml  tauri.conf.json
main/icons/: icon.icns
main/migrations/2024-02-05-092835_create_sessions/: up.sql
main/migrations/2024-02-21-100533_create_steps/: up.sql
main/migrations/2024-02-21-101324_create_answers/: down.sql  up.sql
main/src/: database.rs  error.rs  export.rs  lib.rs  main.rs  projects.rs  reader.rs  rfid_tags.rs  tags.rs
main/src/database/: models.rs
main/src/reader/: command.rs  error.rs  llrp_reader.rs  messages.rs  mock_reader.rs  rospec.rs
main/tokens/: list.json
projects/: bataljong25.json  bibi.json  boadendermonde.json  buitenspeeldag.json  depomg.json  index.js  jbsintniklaas.json  peter.json  phase1NL.json  phase1bel.json  phase1eng.json  phase1port.json  phase1slov.json  portimao.json  teamdagmaart2026.json  test.json  textslidetest.json
reader/: CMakeLists.txt  README.md  build.sh
reader/PrintRFIDReader/: PrintRFIDTags.java
reader/RFIDSample4App/: .classpath  .project  169.254.156.114_0.txt
reader/RFIDSample4App/src/org/zebra/RFIDSample4App/: RFIDSample4App.java
reader/src/: RFIDSample4App.cpp  common.cpp  common.h
reader_windows_wrapper/: Cargo.toml
reader_windows_wrapper/src/: main.rs
rfid_test/: 169.254.156.114_0.txt  Cargo.toml
rfid_test/src/: main.rs  newver.rs  user input en jar file maar geen output.rs
src/: App.jsx  index.html  main.jsx  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2024-02-21-093939_add_project_and_theme_to_sessions/: down.sql  up.sql
src-tauri/src/: database.rs  lib.rs  main.rs  models.rs  projects.rs
src-tauri/src/database/: models.rs  schema.rs
src/styles/: index.css
