[package]
name = "erasmus"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-open", "process-command-api", "test" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.5", features = ["sqlite", "time", "returning_clauses_for_sqlite_3_35"] }
time = "0.3.34"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
include_dir = { version = "0.7.3", features = ["glob"] }
dunce = "1.0.4"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
