[package]
name = "circles"
version = "0.1.4"
license = "CC BY 4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8.2", features = [ "window-set-fullscreen", "dialog-save", "updater", "shell-open", "process-command-api", "test" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.9", features = ["sqlite", "time", "returning_clauses_for_sqlite_3_35"] }
time = "0.3.41"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
include_dir = { version = "0.7.4", features = ["glob"] }
dunce = "1.0.5"
rand = "0.8.5"
llrp = { git = "https://github.com/mchesser/llrp-rs" }
rust_xlsxwriter = "0.66.0"
plist = "1.7.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
